[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "prompt-generator"
version = "0.1.0"
description = "Prompt Generator (PG) Phase 0 bootstrap scaffold"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.5",
  "PyYAML>=6.0.2",
  "Jinja2>=3.1.4",
  "rich>=13.9.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-cov>=5.0.0",
  "ruff>=0.8.0",
  "build>=1.2.2.post1",
]

[project.scripts]
pg = "pg.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/pg"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
